public/stylesheets/graph.css
body {
  background-color: #FFF;
  height: 100vh;
  width: 100vw;
  overflow: hidden;
}

.main-container {
  display: flex;
}

.graph1-container, .graph2-container, .news-list-container {
  height: 100vh;
  width: 30%;
  display: flex;
  justify-content: center;
  align-items: center;
  padding: 20px;
}

#graph1, #graph2 {
  width: 100%;
  height: 50%;
  position: relative;
  padding-right: 20px;  
}

.game-name {
  font-size: 14px;
  fill: black;
}

.ticks line, .ticks path {
  stroke: lightgray;
}

.ticks {
  stroke: black;
  font-size: 14px;
}

.tooltip {
  background: #eee;
  box-shadow: 0 0 5px #999999;
  color: #333;
  display: none;
  font-size: 12px;
  padding: 10px;
  position: absolute;
  text-align: center;
  width: 150px;
  word-break: break-word;
  z-index: 10;
}

.tooltip p {
  font-weight: 700;
}

.stream-list-container {
  height: 30vh;
  width: 100%;
  overflow: auto;  
  display: flex;
  flex-direction: column;
  color: black;
}

.stream-list-container a {
  color: #4C3777;
}

